新增csv增强示例

--- a/retrieval_augmented_generation/augmented-by-csv.ipynb
+++ b/retrieval_augmented_generation/augmented-by-csv.ipynb
@@ -22,8 +22,7 @@
     }
    ],
    "source": [
-    "!pip install langchain openai --upgrade --quiet\n",
-    "!pip install langchain[docarray] --upgrade --quiet"
+    "!pip install langchain openai tiktoken docarray --upgrade --quiet"
    ]
   },
   {
@@ -65,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                name  \\\n0                           Women's Campside Oxfords   \n1           Recycled Waterhog Dog Mat, Chevron Weave   \n2  Infant and Toddler Girls' Coastal Chill Swimsu...   \n3         Refresh Swimwear, V-Neck Tankini Contrasts   \n4                             EcoFlex 3L Storm Pants   \n\n                                         description  \n0  This ultracomfortable lace-to-toe Oxford boast...  \n1  Protect your floors from spills and splashing ...  \n2  She'll love the bright colors, ruffles and exc...  \n3  Whether you're going for a swim or heading out...  \n4  Our new TEK O2 technology makes our four-seaso...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Women's Campside Oxfords</td>\n      <td>This ultracomfortable lace-to-toe Oxford boast...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Recycled Waterhog Dog Mat, Chevron Weave</td>\n      <td>Protect your floors from spills and splashing ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Infant and Toddler Girls' Coastal Chill Swimsu...</td>\n      <td>She'll love the bright colors, ruffles and exc...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Refresh Swimwear, V-Neck Tankini Contrasts</td>\n      <td>Whether you're going for a swim or heading out...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>EcoFlex 3L Storm Pants</td>\n      <td>Our new TEK O2 technology makes our four-seaso...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,15 +96,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T10:02:34.285297Z",
-     "start_time": "2024-03-15T10:02:34.229728Z"
+     "end_time": "2024-03-15T10:29:23.938558Z",
+     "start_time": "2024-03-15T10:29:23.883063Z"
     }
    },
    "id": "3559e9f3c84e26cc"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "#导入向量存储索引创建器\n",
@@ -117,20 +116,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T10:03:00.623400Z",
-     "start_time": "2024-03-15T10:02:36.268254Z"
+     "end_time": "2024-03-15T10:29:35.578679Z",
+     "start_time": "2024-03-15T10:29:25.091162Z"
     }
    },
    "id": "20c752309b436b83"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n\n| 衬衫名称 | 描述总结 |\n| --- | --- |\n| Men's Tropical Plaid Short-Sleeve Shirt | 100% polyester, UPF 50+ sun protection, wrinkle-resistant, front and back cape venting, two front bellows pockets, imported |\n| Men's Plaid Tropic Shirt, Short-Sleeve | 52% polyester, 48% nylon, UPF 50+ sun protection, SunSmart technology, wrinkle-free, front and back cape venting, two front bellows pockets, imported |\n| Girls' Ocean Breeze Long-Sleeve Stripe Shirt | Nylon Lycra®-elastane blend, UPF 50+ sun protection, quick-drying, fade-resistant, durable seawater-resistant fabric, coordinates with swimsuits, imported |"
+      "text/markdown": "\n\n| Name | Description |\n| --- | --- |\n| Men's Tropical Plaid Short-Sleeve Shirt | Rated UPF 50+ for superior sun protection, made of 100% polyester, wrinkle-resistant, with front and back cape venting and two front bellows pockets. |\n| Men's Plaid Tropic Shirt, Short-Sleeve | Rated UPF 50+ for sun protection, originally designed for fishing, made of 52% polyester and 48% nylon, machine washable and dryable, with front and back cape venting and two front bellows pockets. |\n| Girls' Ocean Breeze Long-Sleeve Stripe Shirt | Offers full-coverage sun protection, made of Nylon Lycra®-elastane blend with UPF 50+ rating, recommended by The Skin Cancer Foundation, quick-drying and fade-resistant, coordinates with swimsuits. |"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -148,21 +147,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:36:42.998088Z",
-     "start_time": "2024-03-15T07:36:36.669067Z"
+     "end_time": "2024-03-15T10:29:41.229198Z",
+     "start_time": "2024-03-15T10:29:37.335967Z"
     }
    },
    "id": "597a1553a09be19"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
-      "text/plain": "Document(page_content=\": 0\\nname: Women's Campside Oxfords\\ndescription: This ultracomfortable lace-to-toe Oxford boasts a super-soft canvas, thick cushioning, and quality construction for a broken-in feel from the first time you put them on. \\n\\nSize & Fit: Order regular shoe size. For half sizes not offered, order up to next whole size. \\n\\nSpecs: Approx. weight: 1 lb.1 oz. per pair. \\n\\nConstruction: Soft canvas material for a broken-in feel and look. Comfortable EVA innersole with Cleansport NXT® antimicrobial odor control. Vintage hunt, fish and camping motif on innersole. Moderate arch contour of innersole. EVA foam midsole for cushioning and support. Chain-tread-inspired molded rubber outsole with modified chain-tread pattern. Imported. \\n\\nQuestions? Please contact us for any inquiries.\", metadata={'source': './data/OutdoorClothingCatalog_1000.csv', 'row': 0})"
+      "text/plain": "Document(page_content=\": 0\\nname: Women's Campside Oxfords\\ndescription: This ultracomfortable lace-to-toe Oxford boasts a super-soft canvas, thick cushioning, and quality construction for a broken-in feel from the first time you put them on.\\n\\nSize & Fit: Order regular shoe size. For half sizes not offered, order up to next whole size.\\n\\nSpecs: Approx. weight: 1 lb.1 oz. per pair.\\n\\nConstruction: Soft canvas material for a broken-in feel and look. Comfortable EVA innersole with Cleansport NXT® antimicrobial odor control. Vintage hunt, fish and camping motif on innersole. Moderate arch contour of innersole. EVA foam midsole for cushioning and support. Chain-tread-inspired molded rubber outsole with modified chain-tread pattern. Imported.\\n\\nQuestions? Please contact us for any inquiries.\", metadata={'source': './data/OutdoorClothingCatalog_1000.csv', 'row': 0})"
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,15 +178,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:41:36.346221Z",
-     "start_time": "2024-03-15T07:41:36.279133Z"
+     "end_time": "2024-03-15T10:29:42.422979Z",
+     "start_time": "2024-03-15T10:29:42.358720Z"
     }
    },
    "id": "988245cb0054fd3b"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "outputs": [
     {
      "name": "stdout",
@@ -221,15 +220,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:41:43.720081Z",
-     "start_time": "2024-03-15T07:41:41.518171Z"
+     "end_time": "2024-03-15T10:29:44.716992Z",
+     "start_time": "2024-03-15T10:29:43.517157Z"
     }
    },
    "id": "c477827d24e97860"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
@@ -259,20 +258,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:42:00.679337Z",
-     "start_time": "2024-03-15T07:41:51.094778Z"
+     "end_time": "2024-03-15T10:30:48.245117Z",
+     "start_time": "2024-03-15T10:29:45.482109Z"
     }
    },
    "id": "7eb40fad1e58b07a"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "outputs": [
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "| 衣服名称 | 描述总结 |\n| --- | --- |\n| Men's TropicVibe Shirt, Short-Sleeve | 男士短袖衬衫，内置UPF 50+防晒功能，轻盈舒适，前后通风口，两个前口袋，防皱，最高级别的防晒保护。 |\n| Men's Tropical Plaid Short-Sleeve Shirt | 男士短袖衬衫，UPF 50+防晒，100%聚酯纤维，防皱，前后通风口，两个前口袋，最高级别的防晒保护。 |\n| Men's Plaid Tropic Shirt, Short-Sleeve | 男士短袖衬衫，UPF 50+防晒，52%聚酯纤维和48%尼龙，防皱，前后通风口，两个前口袋，最高级别的防晒保护。 |\n| Girls' Ocean Breeze Long-Sleeve Stripe Shirt | 女童长袖衬衫，UPF 50+防晒，尼龙Lycra®-弹性纤维混纺，快干，耐褪色，耐海水，与我们的泳衣系列搭配，最高级别的防晒保护。 |"
+      "text/markdown": "| Name | Description |\n| --- | --- |\n| Men's TropicVibe Shirt, Short-Sleeve | Lightweight sun-protection shirt with built-in UPF 50+. Traditional fit, wrinkle-resistant, front and back cape venting, and two front bellows pockets. |\n| Men's Plaid Tropic Shirt, Short-Sleeve | Ultracomfortable sun-protection shirt rated UPF 50+. Originally designed for fishing, wrinkle-free, quick-drying, front and back cape venting, and two front bellows pockets. |\n| Girls' Ocean Breeze Long-Sleeve Stripe Shirt | Long-sleeve sun-protection rash guard with full-coverage. Made of Nylon Lycra®-elastane blend with UPF 50+ rating, quick-drying, fade-resistant, and coordinates with swimsuits. |\n| Men's Tropical Plaid Short-Sleeve Shirt | Lightest hot-weather shirt rated UPF 50+ for superior sun protection. Traditional fit, wrinkle-resistant, front and back cape venting, and two front bellows pockets. |\n\nAll of these shirts provide sun protection with a UPF 50+ rating, blocking 98% of the sun's harmful rays. They are made of high-performance fabrics that are quick-drying, wrinkle-resistant, and have front and back cape venting for cool breezes. The Girls' Ocean Breeze Long-Sleeve Stripe Shirt is also recommended by The Skin Cancer Foundation as an effective UV protectant."
      },
      "metadata": {},
      "output_type": "display_data"
@@ -296,8 +295,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T08:01:18.848185Z",
-     "start_time": "2024-03-15T08:01:06.180094Z"
+     "end_time": "2024-03-15T10:31:14.991865Z",
+     "start_time": "2024-03-15T10:31:06.988520Z"
     }
    },
    "id": "649ad0c2135257cb"
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +340,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "| 编号 | 名称 | 描述 |\n| --- | --- | --- |\n| 618 | Men's Tropical Plaid Short-Sleeve Shirt | 100%聚酯纤维制成，轻便，防皱，前后背部有通风口，两个前面的扩张袋口，UPF 50+防晒等级，可阻挡98%的紫外线 |\n| 374 | Men's Plaid Tropic Shirt, Short-Sleeve | 52%聚酯纤维和48%尼龙制成，轻便，防皱，前后背部有通风口，两个前面的扩张袋口，UPF 50+防晒等级，可阻挡98%的紫外线 |\n| 293 | Girls' Ocean Breeze Long-Sleeve Stripe Shirt | 尼龙Lycra®-弹性纤维混纺，长袖，UPF 50+防晒等级，可阻挡98%的紫外线，快干，不褪色，耐海水，建议由皮肤癌基金会作为有效的紫外线防护剂 |\n| 535 | Men's TropicVibe Shirt, Short-Sleeve | 71%尼龙和29%聚酯纤维制成，轻便，防皱，前后背部有通风口，两个前面的扩张袋口，UPF 50+防晒等级，可阻挡98%的紫外线 |\n\n总结：这四件衬衫都具有防晒功能，防晒等级为UPF 50+，可阻挡98%的紫外线。它们都是轻便的，防皱的，有前后背部通风口和前面的扩张袋口。其中三件衬衫是短袖的，一件是长袖的，适合不同的季节和场合。其中一件女孩的衬衫由皮肤癌基金会推荐作为有效的紫外线防护剂。"
+      "text/markdown": "| 编号 | 名称 | 描述 |\n| --- | --- | --- |\n| 618 | Men's Tropical Plaid Short-Sleeve Shirt | 100%聚酯纤维制成，轻便，防皱，前后背部有通风口，两个前面的扩张口袋，UPF 50+防晒 |\n| 374 | Men's Plaid Tropic Shirt, Short-Sleeve | 52%聚酯纤维和48%尼龙制成，轻便，防皱，前后背部有通风口，两个前面的扩张口袋，UPF 50+防晒 |\n| 535 | Men's TropicVibe Shirt, Short-Sleeve | 71%尼龙和29%聚酯纤维制成，防皱，前后背部有通风口，两个前面的扩张口袋，内衬100%聚酯纤维网，UPF 50+防晒 |\n| 293 | Girls' Ocean Breeze Long-Sleeve Stripe Shirt | 尼龙Lycra®-弹性纤维混纺，长袖，UPF 50+防晒，快干，耐褪色，适合与泳衣搭配，推荐皮肤癌基金会认可的有效防晒 |\n\n总结：这四件衬衫都具有防晒功能，UPF 50+防晒，能够阻挡98%的有害紫外线。它们都是轻便的，防皱的，有前后背部通风口和前面的扩张口袋。其中三件是男式短袖衬衫，一件是女童长袖条纹衬衫。女童衬衫是尼龙Lycra®-弹性纤维混纺制成，适合与泳衣搭配。"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -368,8 +367,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T07:59:47.928793Z",
-     "start_time": "2024-03-15T07:59:29.191098Z"
+     "end_time": "2024-03-15T10:31:37.701037Z",
+     "start_time": "2024-03-15T10:31:27.098496Z"
     }
    },
    "id": "d72682f40e4e88b7"
