更新fine-tuning@gemma示例

--- a/fine_tuning/lora-tuning.ipynb
+++ b/fine_tuning/lora-tuning.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/fine_tuning/lora-tuning.ipynb\" target=\"_parent\">Open In Colab</a>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [],
