更新聊天模型中调用函数示例

--- a/function_call/function-call-with-chat-model.ipynb
+++ b/function_call/function-call-with-chat-model.ipynb
@@ -96,6 +96,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
+    "\n",
+    "# import os\n",
+    "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
+    "\n",
+    "import os\n",
+    "from google.colab import userdata\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f9c8307fe7789494"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
    "source": [
