更新基于LangChain的函数调用示例

--- a/function_call/function-call-based-on-langchain.ipynb
+++ b/function_call/function-call-based-on-langchain.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "!pip install langchain openai --upgrade --quiet"
+    "!pip install langchain openai langchain-openai --upgrade --quiet"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:43:31.609883Z",
-     "start_time": "2024-03-15T03:43:24.512023Z"
+     "end_time": "2024-03-16T14:45:57.422364Z",
+     "start_time": "2024-03-16T14:45:45.511915Z"
     }
    },
    "id": "5c5c058f6e2dc05a"
@@ -38,18 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'google.colab'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[31], line 13\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# 三选一 加载OPENAI_API_KEY\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# 本地运行，包含.env文件\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     10\u001B[0m \n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# google colab运行，配置secret key\u001B[39;00m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m---> 13\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m userdata\n\u001B[1;32m     14\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m userdata\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mOPENAI_API_KEY\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'google.colab'"
-     ]
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -71,15 +68,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:43:50.157003Z",
-     "start_time": "2024-03-15T03:43:49.712273Z"
+     "end_time": "2024-03-16T14:45:57.479952Z",
+     "start_time": "2024-03-16T14:45:57.433671Z"
     }
    },
    "id": "e698bd119fa6fbad"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -90,15 +87,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:42:22.515001Z",
-     "start_time": "2024-03-15T03:42:22.469488Z"
+     "end_time": "2024-03-19T01:16:31.396950Z",
+     "start_time": "2024-03-19T01:16:28.791955Z"
     }
    },
    "id": "ade5715506481fcd"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "model = 'gpt-3.5-turbo-0613'\n",
@@ -107,7 +104,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.651517Z"
+     "end_time": "2024-03-19T01:16:36.535636Z",
+     "start_time": "2024-03-19T01:16:34.775978Z"
     }
    },
    "id": "b9662d1c4ce970e3"
@@ -134,8 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'name': 'youtube_search',\n  'description': 'search for youtube videos associated with a person. the input to this tool should be a comma separated list, the first part contains a person name and the second a number that is the maximum number of video results to return aka num_results. the second part is optional',\n  'parameters': {'properties': {'__arg1': {'title': '__arg1',\n     'type': 'string'}},\n   'required': ['__arg1'],\n   'type': 'object'}}]"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tools = [YouTubeSearchTool()]\n",
     "functions = [convert_to_openai_function(t) for t in tools]\n",
@@ -144,16 +151,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-15T03:36:17.802983Z",
-     "start_time": "2024-03-15T03:36:17.666155Z"
+     "end_time": "2024-03-19T01:16:44.296116Z",
+     "start_time": "2024-03-19T01:16:43.486891Z"
     }
    },
    "id": "bd6c1841299cc235"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n  \"__arg1\": \"OpenAI\"\\n}', 'name': 'youtube_search'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "message = llm.invoke([HumanMessage(content='search videos in the topic of OpenAI on Youtube')], functions=functions)\n",
     "message"
@@ -161,7 +177,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.674832Z"
+     "end_time": "2024-03-19T01:17:18.300830Z",
+     "start_time": "2024-03-19T01:17:16.118574Z"
     }
    },
    "id": "53bee6bd758eb4e2"
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "function_descriptions = [\n",
@@ -229,14 +246,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.689206Z"
+     "end_time": "2024-03-19T01:20:20.083648Z",
+     "start_time": "2024-03-19T01:20:20.035857Z"
     }
    },
    "id": "d9f68a8e76dcd56f"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "question = \"\"\"\n",
@@ -252,14 +270,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.698551Z"
+     "end_time": "2024-03-19T01:20:21.899550Z",
+     "start_time": "2024-03-19T01:20:21.848505Z"
     }
    },
    "id": "a22315440ab812da"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import inspect\n",
@@ -285,14 +304,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.706767Z"
+     "end_time": "2024-03-19T01:20:22.713714Z",
+     "start_time": "2024-03-19T01:20:22.667797Z"
     }
    },
    "id": "9ecb63fb0778b269"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def remove_word_from_string(string, index):\n",
@@ -312,15 +332,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.715338Z"
+     "end_time": "2024-03-19T01:20:25.036577Z",
+     "start_time": "2024-03-19T01:20:24.990120Z"
     }
    },
    "id": "b193bfb5330fa2c8"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='', additional_kwargs={'function_call': {'arguments': '{\\n  \"string\": \"black yellow red blue green\",\\n  \"index\": 2\\n}', 'name': 'remove_word_from_string'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_response = llm.invoke([HumanMessage(content=question)], functions=function_descriptions)\n",
     "first_response"
@@ -328,15 +358,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.722777Z"
+     "end_time": "2024-03-19T01:20:29.430298Z",
+     "start_time": "2024-03-19T01:20:27.430795Z"
     }
    },
    "id": "7d8f1593a9d1124a"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'black yellow blue green'"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get function name, and its arguments\n",
     "import json\n",
@@ -357,15 +397,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.726663Z"
+     "end_time": "2024-03-19T01:20:55.144099Z",
+     "start_time": "2024-03-19T01:20:55.096891Z"
     }
    },
    "id": "1b2510d1e37df5c8"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='The updated string after removing the third word is: \"black yellow blue green\".\\n\\nNow, I will send the updated string to Alex via email.', additional_kwargs={'function_call': {'arguments': '{\\n  \"recipient\": \"alex@xyz.com\",\\n  \"message\": \"black yellow blue green\"\\n}', 'name': 'send_message_by_email'}}, response_metadata={'finish_reason': 'function_call', 'logprobs': None})"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "second_response = llm.invoke(\n",
     "    [\n",
@@ -384,15 +434,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.738049Z"
+     "end_time": "2024-03-19T01:21:10.734964Z",
+     "start_time": "2024-03-19T01:21:08.021053Z"
     }
    },
    "id": "38e57a0b05001e1c"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending black yellow blue green to alex@xyz.com\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'Just sent email to alex@xyz.com'"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Again get function name, and its arguments\n",
     "\n",
@@ -412,15 +479,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.740595Z"
+     "end_time": "2024-03-19T01:21:42.340980Z",
+     "start_time": "2024-03-19T01:21:42.287391Z"
     }
    },
    "id": "589d0eefbde7a441"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='I have removed the third word from the string and sent the updated string to Alex via email.', response_metadata={'finish_reason': 'stop', 'logprobs': None})"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "third_response = llm.invoke(\n",
     "    [\n",
@@ -439,20 +516,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.744151Z"
+     "end_time": "2024-03-19T01:21:57.364043Z",
+     "start_time": "2024-03-19T01:21:55.265447Z"
     }
    },
    "id": "7703354b4fa031f9"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-03-15T03:36:17.749485Z"
+     "end_time": "2024-03-16T14:46:33.790701Z",
+     "start_time": "2024-03-16T14:46:33.715995Z"
     }
    },
    "id": "c972dd7a7eaefa8c"
