--- a/retrieval_augmented_generation/rag-helloworld.ipynb
+++ b/retrieval_augmented_generation/rag-helloworld.ipynb
@@ -13,7 +13,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install langchain openai --upgrade --quiet"
+    "!pip install langchain langchain_openai faiss-gpu --upgrade --quiet"
    ]
   },
   {
