--- a/langchain_expression_language/rag-search-example.ipynb
+++ b/langchain_expression_language/rag-search-example.ipynb
@@ -26,16 +26,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
     "<a href=\"https://colab.research.google.com/github/qxr777/llm-application-code/blob/master/langchain_expression_language/rag-search-example.ipynb\" target=\"_parent\">Open In Colab</a>"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "8c1075df0e6a6aea"
+   "id": "af97d41c9f4b2b8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 三选一 加载OPENAI_API_KEY\n",
+    "\n",
+    "# 本地运行，包含.env文件\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
+    "\n",
+    "# 本地运行，不包含.env文件\n",
+    "# import os\n",
+    "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
+    "\n",
+    "# google colab运行，需要配置secret key\n",
+    "import os\n",
+    "from google.colab import userdata\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "98e24d512d6de2"
   },
   {
    "cell_type": "code",
