更新lcel系列示例

--- a/langchain_expression_language/parallelism-example.ipynb
+++ b/langchain_expression_language/parallelism-example.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install --upgrade --quiet  langchain-core langchain-community langchain-openai"
+    "!pip install --upgrade --quiet  langchain-core langchain-community langchain-openai grandalf"
    ]
   },
   {
