更新langserve-app系列示例

--- a/langchain_expression_language/rag-search-example.ipynb
+++ b/langchain_expression_language/rag-search-example.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "!pip install langchain docarray tiktoken --quiet"
+    "!pip install langchain-core langchain-community langchain-openai docarray tiktoken --quiet"
    ]
   },
   {
